Update email and hostname in Traefik configuration

--- a/compose/traefik/traefik.yml
+++ b/compose/traefik/traefik.yml
@@ -19,7 +19,7 @@ certificatesResolvers:
   letsencrypt:
     # https://docs.traefik.io/master/https/acme/#lets-encrypt
     acme:
-      email: "example@test.com"
+      email: "furyx@hotmail.com"
       storage: /etc/traefik/acme/acme.json
       # https://docs.traefik.io/master/https/acme/#httpchallenge
       httpChallenge:
@@ -28,7 +28,7 @@ certificatesResolvers:
 http:
   routers:
     web-secure-router:
-      rule: "Host(`example.com`)"
+      rule: "Host(`furyhawk.lol`)"
       entryPoints:
         - web-secure
       middlewares:
