Add TLS configuration for Traefik router

--- a/compose/traefik/traefik.yml
+++ b/compose/traefik/traefik.yml
@@ -46,6 +46,9 @@ http:
       middlewares:
         - redirect
       service: dummy@internal
+      tls:
+        # https://docs.traefik.io/master/routing/routers/#certresolver
+        certResolver: letsencrypt
 
   middlewares:
     csrf:
