--- a/compose/traefik/traefik.yml
+++ b/compose/traefik/traefik.yml
@@ -60,7 +60,7 @@ http:
     redirect:
       # https://docs.traefik.io/master/middlewares/redirectscheme/
       redirectregex:
-        regex: "^https://bai.furyhawk.lol/(.*)"
+        regex: "^https://blog.furyhawk.lol/(.*)"
         replacement: "https://furyhawk.github.io/${1}"
         permanent: true
 
