Add 'fin.furyhawk.lol' to web-secure-router rule

--- a/compose/traefik/traefik.yml
+++ b/compose/traefik/traefik.yml
@@ -29,7 +29,7 @@ certificatesResolvers:
 http:
   routers:
     web-secure-router:
-      rule: "Host(`furyhawk.lol`, `www.furyhawk.lol`)"
+      rule: "Host(`furyhawk.lol`, `www.furyhawk.lol`, `fin.furyhawk.lol`)"
       entryPoints:
         - web-secure
       middlewares:
