Update Dockerfile and service names for Streamlit app

--- a/compose/traefik/traefik.yml
+++ b/compose/traefik/traefik.yml
@@ -35,7 +35,7 @@ http:
       middlewares:
         - csrf
         - add-fin
-      service: streamlit_app
+      service: streamlit_fin_app
       tls:
         # https://docs.traefik.io/master/routing/routers/#certresolver
         certResolver: letsencrypt
@@ -71,10 +71,10 @@ http:
         permanent: true
 
   services:
-    streamlit_app:
+    streamlit_fin_app:
       loadBalancer:
         servers:
-          - url: http://streamlit_app:8501/fin
+          - url: http://streamlit_fin_app:8501/fin
     blog:
       loadBalancer:
         servers:
