Update production.yml with environment variable changes

--- a/production.yml
+++ b/production.yml
@@ -2,8 +2,8 @@ version: '3.4'
 
 x-env: &env
   environment:
-    - FIN_LOCATION=/fin
-    - STREAMLIT_FIN_SERVER_PORT=8501
+    FIN_LOCATION: /fin
+    STREAMLIT_FIN_SERVER_PORT: 8501
 
 volumes:
   production_traefik: {}
