--- a/production.yml
+++ b/production.yml
@@ -1,15 +1,16 @@
 version: '3.4'
 
-x-env: &env
-  - FIN_LOCATION="/fin"
-  - STREAMLIT_FIN_SERVER_PORT="8501"
+x-environment: &default-environment
+  FIN_LOCATION: /fin
+  STREAMLIT_FIN_SERVER_PORT: 8501
 
 volumes:
   production_traefik: {}
 
 services:
   streamlit-fin:
-    environment: *env
+    environment:
+      <<: *default-environment
     build: 
       context: .
       dockerfile: ./compose/streamlit-fin/Dockerfile
@@ -21,7 +22,8 @@ services:
     command: streamlit run --server.port=$STREAMLIT_FIN_SERVER_PORT --server.address=0.0.0.0 --server.baseUrlPath=$FIN_LOCATION src/app.py
 
   traefik:
-    environment: *env
+    environment:
+      <<: *default-environment
     build:
       context: .
       dockerfile: ./compose/traefik/Dockerfile
