--- a/production.yml
+++ b/production.yml
@@ -1,13 +1,25 @@
 version: '3.4'
 
 x-environment: &default-environment
-  FIN_LOCATION: /fin
-  STREAMLIT_FIN_SERVER_PORT: 8501
+  FIN_LOCATION: "/fin"
+  STREAMLIT_FIN_SERVER_PORT: "8501"
+  BAI_LOCATION: "/bai"
+  STREAMLIT_BAI_SERVER_PORT: "8502"
 
 volumes:
   production_traefik: {}
 
 services:
+  streamlit-bai:
+    environment:
+      <<: *default-environment
+    image: furyhawk/beyondallinfo:latest
+    container_name: streamlit_bai_app
+    restart: always
+    expose:
+      - ${STREAMLIT_BAI_SERVER_PORT}
+    command: streamlit run --server.port=$STREAMLIT_BAI_SERVER_PORT --server.address=0.0.0.0 --server.baseUrlPath=$BAI_LOCATION src/app.py
+
   streamlit-fin:
     environment:
       <<: *default-environment
