Update Traefik configuration to use web-secure entry point for osrm-router

--- a/compose/traefik/traefik.yml
+++ b/compose/traefik/traefik.yml
@@ -16,9 +16,6 @@ entryPoints:
     # https
     address: ":443"
 
-  osrm:
-    address: ":5000"
-
 certificatesResolvers:
   letsencrypt:
     # https://docs.traefik.io/master/https/acme/#lets-encrypt
@@ -69,7 +66,7 @@ http:
     osrm-router:
       rule: "Host(`osrm.furyhawk.lol`)"
       entryPoints:
-        - osrm
+        - web-secure
       middlewares:
         - csrf
       service: osrm_service
