--- a/compose/traefik/traefik.yml
+++ b/compose/traefik/traefik.yml
@@ -1,5 +1,5 @@
 log:
-  level: INFO
+  level: ${LOG_LEVEL}
 
 entryPoints:
   web:
@@ -10,7 +10,6 @@ entryPoints:
       redirections:
         entryPoint:
           to: web-secure
-          scheme: https
 
   web-secure:
     # https
@@ -104,7 +103,7 @@ http:
     osrm_service:
       loadBalancer:
         servers:
-          - url: http://localhost:5000
+          - url: http://osrm-backend:{{env "OSRM_PORT"}}
     streamlit_bai_app:
       loadBalancer:
         servers:
