--- a/production.yml
+++ b/production.yml
@@ -1,6 +1,9 @@
-version: '3.4'
+version: '3.7'
 
 x-environment: &default-environment
+  LOG_LEVEL: "DEBUG"
+  DASHBOARD_USER: ${DASHBOARD_USER}
+  DASHBOARD_PASSWORD: ${DASHBOARD_PASSWORD}
   FIN_LOCATION: "/fin"
   STREAMLIT_FIN_SERVER_PORT: "8501"
   BAI_LOCATION: "/bai"
@@ -10,6 +13,23 @@ volumes:
   production_traefik: {}
 
 services:
+  osrm-backend:
+    environment:
+      # OSRM manager setup
+      - OSRM_ALGORITHM=mld
+      - OSRM_THREADS=2
+      - OSRM_PORT=5000
+      - OSRM_PROFILE=/opt/car.lua
+      - OSRM_MAP_NAME=${OSRM_MAP_NAME}
+      - OSRM_GEOFABRIK_PATH=${OSRM_GEOFABRIK_PATH}
+      # Notify OSRM Manager to restart without stopping container
+      - OSRM_NOTIFY_FILEPATH=/data/osrm_notify.txt
+    image: furyhawk/osrm-backend:${OSRM_VERSION:-latest}
+    container_name: osrm-backend
+    restart: always
+    expose:
+      - ${OSRM_PORT}
+
   streamlit-bai:
     environment:
       <<: *default-environment
