--- a/compose/traefik/traefik.yml
+++ b/compose/traefik/traefik.yml
@@ -37,7 +37,7 @@ certificatesResolvers:
 http:
   routers:
     dashboard:
-      rule: "Host(`dashboard.furyhawk.lol`)"
+      rule: "Host(`dashboard.furyhawk.lol`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
       service: api@internal
       middlewares:
         - auth
